one final correction to navbar on small mobile display

--- a/screen-scaling/small-phone.css
+++ b/screen-scaling/small-phone.css
@@ -16,11 +16,3 @@
   }
 
 }
-
-@media screen and (max-width: 360px) {
-  .menu-iphone {
-    /*display: none;*/
-    bottom: 20px;
-  }
-
-}
